[package]
name = "Hope_MarketPlace"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "NFT marketplace projects based on Juno chain"
repository = "https://github.com/CosmWasm/cosmwasm-examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]

cosmwasm-std = "1.0.0-beta"  
cosmwasm-storage = "1.0.0-beta" 
cw-storage-plus = { version = "0.12.0" }
schemars = "0.8"
cw2 = "0.12.0"
thiserror = "1.0.23"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw20 = "0.12.0"
cw721 = "0.12.0"
cw721-base = "0.12.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0-beta"
cosmwasm-vm = "1.0.0-beta"